# cmakeinit

./: README.md  Taskfile.yml  cmake.tmpl  go.mod  main.go
test/: CMakeLists.txt
